# PrimeWorldEditor

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml
src/Core/: CAreaAttributes.cpp  CAreaAttributes.h  CAudioManager.cpp  CAudioManager.h  CMayaSpline.cpp  CMayaSpline.h  CompressionUtil.cpp  CompressionUtil.h  IProgressNotifier.h  IUIRelay.h  NCoreTests.cpp
src/Core/GameProject/: AssetNameGeneration.cpp  CAssetNameMap.cpp  CAssetNameMap.h  CDependencyTree.cpp  CDependencyTree.h  CGameExporter.cpp  CGameExporter.h  CGameProject.h  COpeningBanner.cpp  COpeningBanner.h  CPackage.cpp  CPackage.h  CResourceEntry.cpp  CResourceEntry.h  CResourceIterator.h  CResourceStore.cpp  CResourceStore.h  CVirtualDirectory.cpp  CVirtualDirectory.h  DependencyListBuilders.cpp  DependencyListBuilders.h
src/Core/OpenGL/: CDynamicVertexBuffer.h  CFramebuffer.cpp  CFramebuffer.h  CIndexBuffer.cpp  CIndexBuffer.h  CRenderbuffer.h  CShader.cpp  CShader.h  CShaderGenerator.cpp  CShaderGenerator.h  CUniformBuffer.h  CVertexArrayManager.cpp  CVertexArrayManager.h  CVertexBuffer.cpp  CVertexBuffer.h
src/Core/Render/: CBoneTransformData.h  CCamera.cpp  CCamera.h  CDrawUtil.cpp  CDrawUtil.h  CGraphics.cpp  CGraphics.h  CRenderBucket.cpp  CRenderBucket.h  CRenderer.cpp  CRenderer.h  IRenderable.h  SRenderablePtr.h  SViewInfo.h
src/Core/Resource/: CAudioGroup.h  CAudioLookupTable.h  CAudioMacro.h  CDependencyGroup.h  CFont.cpp  CFont.h  CLight.cpp  CLight.h  CMapArea.h  CMaterial.cpp  CMaterial.h  CMaterialPass.cpp  CMaterialPass.h  CMaterialSet.h  CPoiToWorld.cpp  CPoiToWorld.h  CResTypeFilter.h  CResTypeInfo.cpp  CResTypeInfo.h  CResource.h  CSavedStateID.h  CStringList.h  CTexture.cpp  CTexture.h  CWorld.h  ETevEnums.h  TResPtr.h
src/Core/Scene/: CCharacterNode.cpp  CCollisionNode.cpp  CLightNode.cpp  CRootNode.h  CScene.cpp  CScene.h  CSceneNode.cpp  CSceneNode.h  CScriptAttachNode.cpp  CScriptNode.cpp  CScriptNode.h  ENodeType.h  FShowFlags.h
src/Core/ScriptExtra/: CDamageableTriggerExtra.cpp  CDamageableTriggerExtra.h  CDoorExtra.cpp  CDoorExtra.h  CRadiusSphereExtra.cpp  CRadiusSphereExtra.h  CSandwormExtra.cpp  CSandwormExtra.h  CScriptExtra.cpp  CScriptExtra.h  CSpacePirateExtra.cpp  CSpacePirateExtra.h  CSplinePathExtra.cpp  CSplinePathExtra.h  CWaypointExtra.cpp  CWaypointExtra.h
src/Core/Tweaks/: CTweakCooker.cpp  CTweakCooker.h  CTweakData.h  CTweakLoader.cpp  CTweakLoader.h  CTweakManager.cpp  CTweakManager.h
src/Editor/: CBasicViewport.cpp  CBasicViewport.h  CEditorApplication.cpp  CErrorLogDialog.cpp  CErrorLogDialog.h  CExportGameDialog.cpp  CExportGameDialog.h  CGeneratePropertyNamesDialog.cpp  CGeneratePropertyNamesDialog.h  CGizmo.cpp  CGridRenderable.h  CLineRenderable.h  CMakeLists.txt  CNodeCopyMimeData.h  CNodeSelection.h  CProgressDialog.cpp  CProgressDialog.h  CProjectSettingsDialog.cpp  CProjectSettingsDialog.h  CQuickplayPropertyEditor.cpp  CSceneViewport.cpp  CSceneViewport.h  CTweakEditor.cpp  CTweakEditor.h  CUIRelay.h  IEditor.cpp  INodeEditor.cpp  INodeEditor.h  NDolphinIntegration.cpp  NDolphinIntegration.h  SDolHeader.h  UICommon.h  main.cpp
src/Editor/CharacterEditor/: CCharacterEditor.cpp  CSkeletonHierarchyModel.cpp  CSkeletonHierarchyModel.h
src/Editor/CollisionEditor/: CCollisionEditor.cpp
src/Editor/ModelEditor/: CModelEditorViewport.cpp  CModelEditorWindow.cpp  CModelEditorWindow.h
src/Editor/PropertyEdit/: CPropertyDelegate.cpp  CPropertyDelegate.h  CPropertyModel.cpp  CPropertyModel.h  CPropertyView.cpp  CPropertyView.h
src/Editor/ResourceBrowser/: CResourceBrowser.cpp  CResourceBrowser.h  CResourceDelegate.cpp  CResourceProxyModel.cpp  CResourceProxyModel.h  CResourceTableContextMenu.cpp  CResourceTableContextMenu.h  CResourceTableModel.cpp  CResourceTableModel.h  CResourceTableView.cpp  CResourceTableView.h  CVirtualDirectoryModel.cpp  CVirtualDirectoryModel.h  CVirtualDirectoryTreeView.cpp  CVirtualDirectoryTreeView.h
src/Editor/ScanEditor/: CScanEditor.cpp  CScanEditor.h
src/Editor/StringEditor/: CStringEditor.cpp  CStringListModel.cpp  CStringListModel.h
src/Editor/Undo/: CCloneSelectionCommand.cpp  CDeleteLinksCommand.cpp  CDeleteLinksCommand.h  CDeleteSelectionCommand.cpp  CDeleteSelectionCommand.h  CMoveResourceCommand.h  CPasteNodesCommand.cpp  CPasteNodesCommand.h  ObjReferences.h  (+5 more)
(+170 files in other folders)
